--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,8 @@
+php_flag display_errors 1
+
 Redirect /eye2eye/donate /eye2eye/donate.php
 Redirect /vote /vote.php
+Redirect /apply /rush/application.php
 
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
