--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 Redirect /eye2eye/donate /eye2eye/donate.php
 Redirect /vote /vote.php
+Redirect /apply /rush/application.php
 
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
